--- a/css/style.css
+++ b/css/style.css
@@ -175,13 +175,13 @@ a:active {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-wrap: nowrap;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 0 auto;
 }
 nav {
@@ -189,8 +189,8 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 0 0 0 160px;
 }
 .logo-block {
@@ -230,12 +230,12 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0 auto;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 .menu-ul {
@@ -291,7 +291,7 @@ nav {
   padding: 5px;
   outline: none;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: transparent;
   border: none;
   position: absolute;
@@ -318,10 +318,10 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-wrap: nowrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .carousel-lr {
@@ -345,10 +345,10 @@ nav {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
 }
 
 .carousel-h2 {
@@ -392,7 +392,7 @@ nav {
   text-transform: uppercase;
   color: #ffffff;
   -webkit-box-shadow: inset 0px -3px 0 0 #736357;
-          box-shadow: inset 0px -3px 0 0 #736357;
+  box-shadow: inset 0px -3px 0 0 #736357;
   background-color: #998675;
   border-radius: 3px;
   margin: 0 auto;
@@ -416,8 +416,8 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 324px 0 0 872px;
 }
 
@@ -435,8 +435,8 @@ nav {
   background-color: transparent;
   border: 1px solid #d3c1ad;
   -webkit-transform: scale(1.5);
-      -ms-transform: scale(1.5);
-          transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 .options {
@@ -444,8 +444,8 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 80px;
   margin-bottom: 80px;
 }
@@ -455,14 +455,14 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 300px;
   padding: 10px 10px 0 10px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .options-block {
@@ -470,14 +470,14 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 300px;
   padding: 10px 10px 0 10px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .options-block:after {
@@ -550,11 +550,11 @@ nav {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .screenshot-h2 {
@@ -607,7 +607,13 @@ nav {
 
 .advertising {
   min-height: 150px;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#211b19), to(#4e3427));
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#211b19),
+    to(#4e3427)
+  );
   background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
   background-image: linear-gradient(to top, #211b19, #4e3427);
   padding: 0 374px 0 376px;
@@ -616,11 +622,11 @@ nav {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .advertising-text {
@@ -644,7 +650,7 @@ nav {
   text-transform: uppercase;
   color: #ffffff;
   -webkit-box-shadow: inset 0px -3px 0 0 #736357;
-          box-shadow: inset 0px -3px 0 0 #736357;
+  box-shadow: inset 0px -3px 0 0 #736357;
   background-color: #998675;
   border-radius: 3px;
   margin: 0 0 0 0;
@@ -709,7 +715,6 @@ nav {
 }
 .advertising-p:hover {
   color: #c7b299;
-
 }
 
 .products {
@@ -753,8 +758,8 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-bottom: 40px;
 }
 
@@ -790,7 +795,7 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .products-list-block {
@@ -810,12 +815,12 @@ nav {
   -o-transition: 500ms;
   transition: 500ms;
   -webkit-filter: brightness(60%);
-          filter: brightness(60%);
+  filter: brightness(60%);
 }
 
 .products-txt-wrp {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #fbfaf8;
   padding: 30px 0 27px 30px;
   position: relative;
@@ -948,4 +953,190 @@ nav {
 .btn-load-more:active {
   background-color: #998675;
   color: #fff;
+}
+
+.wrap-video {
+  position: relative;
+  min-height: 705px;
+}
+.video {
+  outline: none;
+  width: 1920px;
+  height: 705px;
+}
+
+.video:active .presentation {
+  display: none;
+}
+
+/* убирает контроллеры у видео*/
+.video::-webkit-media-controls {
+  display: none !important;
+}
+
+.presentation {
+  position: absolute;
+  width: 560px;
+  min-height: 290px;
+  top: 210px;
+  left: 680px;
+}
+
+.play-svg {
+  fill: white;
+  margin: 15px;
+}
+.play-blok:hover .play-svg {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
+  fill: #d3c1ad;
+}
+
+.play-blok:active .play-svg {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
+  fill: #ddcfc3;
+}
+.play-blok {
+  width: 100px;
+  height: 100px;
+  background-color: #0000003d;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.play-blok:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
+  background-color: #00000050;
+}
+.play-blok:active {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
+  background-color: #00000034;
+}
+
+.presentation-h2 {
+  width: 383px;
+  height: 23px;
+  font-family: "raleway medium", "open sans", sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  margin-left: 90px;
+}
+
+.presentation-txt {
+  width: 560px;
+  height: 44px;
+  font-family: "montserrat light", verdana, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+.presentation-time {
+  width: 36px;
+  height: 11px;
+  font-family: "montserrat light", verdana, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  text-align: center;
+  color: #c7b299;
+  margin-left: 265px;
+}
+
+.mobile {
+  width: 1920px;
+  min-height: 695px;
+  background-color: #fbfaf8;
+  display: flex;
+  }
+
+.mobile-img {
+  margin-left: 423px;
+  margin-top: 80px;
+}
+.mobile-txt {
+  margin-top: 194px;
+  margin-left: 31px;
+  
+}
+
+.mobile-h2 {
+  width: 408px;
+  height: 24px;
+  font-family: "raleway semibold", "open sans semibold", sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #555555;  
+}
+
+.mobile-p {
+  width: 665px;
+  height: 100px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  text-align:justify;
+  line-height: 1.75;
+  letter-spacing: normal;
+  color: #8c8c8c;
+  margin: 38px 0 44px 0;
+}
+.mobile-list {
+  height: 112px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2;
+  letter-spacing: normal;
+  text-align: left;
+  color: #8c8c8c;
+  margin: 0 0 0 79px;
+  padding: 0 0 0 0;
+}
+
+.mobile-list-item {
+  list-style-type: none;
+  position: relative;
+  padding: 0 0 0 10px; 
+}
+.mobile-list-item:before {
+  content: "";
+  display: block;
+  width: 20px;
+  min-height: 20px;
+  position: absolute;
+  top: 5px;
+  left: -29px;
+  background-image: url(../img/list-marker.svg);
+  background-size: cover;
 }
