--- a/css/style.css
+++ b/css/style.css
@@ -387,8 +387,7 @@ nav {
   margin-top: 14px;
   margin-bottom: 50px;
   display: block;
-width: 100%;
-  
+  width: 100%;
 }
 
 .carousel-btn-txt {
@@ -1201,6 +1200,7 @@ width: 100%;
 }
 
 .progress-box:hover svg.progress-svg {
+  transition: 500ms;
   fill: white;
 }
 .progress-point {
@@ -1218,6 +1218,7 @@ width: 100%;
   margin: 30px 0 0 0;
 }
 .progress-box:hover .progress-point {
+  transition: 500ms;
   color: rgb(199, 178, 153);
 }
 
@@ -1237,5 +1238,248 @@ width: 100%;
 }
 
 .progress-box:hover .progress-txt {
+  transition: 500ms;
   color: #ffffff;
+}
+
+.recent-posts {
+  position: relative;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 80px 0 0 0;
+  margin: 0 auto;
+}
+
+.recent-posts-img {
+  display: block;
+}
+
+.recent-posts-box:hover .recent-posts-img {
+  transition: 500ms;
+  filter: brightness(60%);
+}
+
+.recent-posts-h2 {
+  height: 23px;
+  font-family: "raleway semibold", "open sans semibold", sans-serif;
+  font-size: 30px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #555555;
+  display: block;
+  margin: 0 0 28px 0;
+}
+
+.recent-posts-p {
+  width: 719px;
+  font-family: "montserrat light", verdana, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: center;
+  color: #8c8c8c;
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+}
+
+.reset-post-wrp{
+  display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.recent-posts-box {
+  width: 370px;
+  min-height: 395px;
+  outline: solid 1px #f8f8f8;
+  margin: 0 15px 0 15px;
+  
+}
+
+.recent-posts-box:hover {
+  transition: 500ms;
+  background-color: #362f2d;
+}
+
+.calendar {
+  position: absolute;
+  margin: -200px 0 0 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.date {
+  width: 29px;
+  min-height: 17px;
+  font-family: "montserrat light", verdana, sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.83;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  padding: 9px 10px 9px 10px;
+  background-color: #363636;
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  -webkit-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.recent-posts-box:hover .date {
+  transition: 500ms;
+  background-color: #c7b299;
+}
+
+.month {
+  width: 23px;
+  min-height: 11px;
+  font-family: "roboto-regular", verdana, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  padding: 7px 13px 7px 13px;
+  background-color: #252525;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.recent-posts-box:hover .month {
+  transition: 500ms;
+  background-color: #a48d72;
+}
+
+.recent-pagination {
+  position: absolute;
+  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: -24px 0 22px 134px;
+}
+
+.recent-pagination-img {
+  display: block;
+  width: 11px;
+  height: 11px;
+  opacity: 0.5;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 2px solid transparent;
+}
+
+.recent-pagination-img:hover {
+  transition: 500ms;
+  background-color: transparent;
+  border: solid 2px #d3c1ad;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.recent-posts-title {
+  font-family: "raleway medium", "open sans", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #555555;
+  display: block;
+  margin: 30px 0 0 29px;
+}
+
+.recent-posts-box:hover .recent-posts-title {
+  transition: 500ms;
+  color: #c7b299;
+}
+
+.recent-posts-txt {
+  font-family: "montserrat light", verdana, sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  text-align: left;
+  color: #8c8c8c;
+  margin: 19px 0 0 29px;
+}
+
+.recent-posts-box:hover .recent-posts-title {
+  transition: 500ms;
+  color: #fff;
+}
+
+.recent-posts-a {
+  font-family: "montserrat light", verdana, sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: left;
+  display: block;
+  margin: 27px 0 33px 29px;
+}
+
+.recent-posts-box:hover .recent-posts-a {
+  transition: 500ms;
+  color: #c7b299;
+}
+
+.recent-posts-a:after {
+  content: "";
+  display: block;
+  position: absolute;
+  display: block;
+  float: left;
+  border: 5px solid transparent;
+  border-left: 8px solid #c7b299;
+  margin: -13px 0 0 84px;
+}
+
+.recent-posts-box:hover .recent-posts-a:after {
+  transition: 500ms;
+  border-left: 8px solid #c7b299;
 }
