--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,6 @@ nav {
 
 .screenshot-txt {
   width: 719px;
-  height: 44px;
   font-family: "montserrat light", verdana, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -747,20 +746,16 @@ nav {
 }
 
 .products-p {
-  width: 719px;
-  height: 44px;
+  display: block;
+  max-width: 757px;
+  margin: 0 auto;
   font-family: "montserrat light", verdana, sans-serif;
   font-size: 16px;
+  line-height: 28px;
   font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.75;
-  letter-spacing: normal;
   text-align: center;
   color: #8c8c8c;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 40px;
 }
 .products-btn {
   display: -webkit-box;
@@ -769,7 +764,7 @@ nav {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin-bottom: 40px;
+  margin: 40px 0 40px 0;
 }
 
 .products-btn-item {
@@ -1094,7 +1089,6 @@ nav {
 
 .mobile-h2 {
   width: 408px;
-  height: 24px;
   font-family: "raleway semibold", "open sans semibold", sans-serif;
   font-size: 30px;
   font-weight: 600;
@@ -1108,7 +1102,6 @@ nav {
 
 .mobile-p {
   width: 665px;
-  height: 100px;
   font-family: "montserrat light", verdana, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -1116,7 +1109,6 @@ nav {
   font-style: normal;
   text-align: justify;
   line-height: 1.75;
-  letter-spacing: normal;
   color: #8c8c8c;
   margin: 38px 0 44px 0;
 }
@@ -1289,11 +1281,11 @@ nav {
   margin: 0 auto;
 }
 
-.reset-post-wrp{
+.reset-post-wrp {
   display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   margin-top: 40px;
 }
@@ -1303,7 +1295,6 @@ nav {
   min-height: 395px;
   outline: solid 1px #f8f8f8;
   margin: 0 15px 0 15px;
-  
 }
 
 .recent-posts-box:hover {
@@ -1332,7 +1323,7 @@ nav {
   letter-spacing: normal;
   text-align: center;
   color: #ffffff;
-  padding: 9px 10px 9px 10px;
+  padding: 9px 11px 9px 10px;
   background-color: #363636;
   -moz-border-radius-topleft: 4px;
   -webkit-border-top-left-radius: 4px;
@@ -1352,29 +1343,17 @@ nav {
 }
 
 .month {
-  width: 23px;
-  min-height: 11px;
-  font-family: "roboto-regular", verdana, sans-serif;
-  font-size: 12px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.67;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff;
-  padding: 7px 13px 7px 13px;
-  background-color: #252525;
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
+  padding: 7px 0 7px 0;
+    font-family: "roboto-regular", verdana, sans-serif;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #ffffff;
+    width: 50px;
+    background-color: #252525;
+    border-radius: 0 0 3px 3px;
+    display: block;
+    text-align: center;
 }
 
 .recent-posts-box:hover .month {
