--- a/css/style.css
+++ b/css/style.css
@@ -1108,7 +1108,6 @@ nav {
 
 .mobile-p {
   width: 665px;
-  height: 100px;
   font-family: "montserrat light", verdana, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -1289,11 +1288,11 @@ nav {
   margin: 0 auto;
 }
 
-.reset-post-wrp{
+.reset-post-wrp {
   display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   margin-top: 40px;
 }
@@ -1303,7 +1302,6 @@ nav {
   min-height: 395px;
   outline: solid 1px #f8f8f8;
   margin: 0 15px 0 15px;
-  
 }
 
 .recent-posts-box:hover {
@@ -1372,7 +1370,6 @@ nav {
   -webkit-border-bottom-left-radius: 4px;
   border-bottom-left-radius: 4px;
   display: flex;
-  flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
 }
@@ -1483,3 +1480,45 @@ nav {
   transition: 500ms;
   border-left: 8px solid #c7b299;
 }
+
+.box-btn {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0 80px 0;
+}
+
+.recent-posts-pagination {
+  outline: none;
+  border: 0;
+  background: transparent;
+}
+
+.recent-posts-btn {
+  fill: #d1d1d1;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+}
+
+.partners {
+  background-image: url(../img/partners-bg.jpg);
+  min-height: 490px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+
+}
+
+
+.partners-img {
+    transition: 1s; /* Время эффекта */
+    display: block;
+    margin: 0 45px 0 45px;
+   }
+   .partners-img:hover {
+    transform: scale(1.2); /* Увеличиваем масштаб */
+   }
