--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,7 @@ nav {
 .screenshot {
   margin: 0 auto;
   width: 1920px;
-  height: 700px;
+  min-height: 700px;
   background-color: #fbfaf8;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -568,7 +568,6 @@ nav {
 
 .screenshot-h2 {
   width: 500px;
-  height: 30px;
   font-family: "raleway semibold", "open sans semibold", sans-serif;
   font-size: 30px;
   font-weight: 600;
@@ -581,7 +580,7 @@ nav {
 }
 
 .screenshot-txt {
-  width: 719px;
+  width: 760px;
   font-family: "montserrat light", verdana, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -593,6 +592,12 @@ nav {
   margin: 20px 0 0 0;
 }
 
+.screenshot-image {
+  padding: 0 0 0 0;
+  margin: 25px 0 0 0;
+}
+
+/*
 .screenshot-img {
   position: relative;
   width: 1230px;
@@ -612,72 +617,21 @@ nav {
   position: absolute;
   margin: 122px 0 0 460px;
 }
+*/
 
 .advertising {
+  width: 100%;
   min-height: 150px;
-  background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    from(#211b19),
-    to(#4e3427)
-  );
   background-image: linear-gradient(to top, #211b19, #4e3427);
-  padding: 0 374px 0 376px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
+  align-content: center;
 }
 
 .advertising-text {
-  float: left;
-  margin-right: 373px;
-}
-
-.advertising-btn {
-  float: left;
-  margin: 50px 0 0 0;
-}
-
-.btn-txt {
-  display: block;
-  text-decoration: none;
-  width: 170px;
-  min-height: 50px;
-  font-family: "raleway extrabold", "open sans extrabold", sans-serif;
-  font-size: 14px;
-  font-weight: 800;
-  text-transform: uppercase;
-  color: #ffffff;
-  -webkit-box-shadow: inset 0px -3px 0 0 #736357;
-  box-shadow: inset 0px -3px 0 0 #736357;
-  background-color: #998675;
-  border-radius: 3px;
-  margin: 0 0 0 0;
-  text-align: center;
-  line-height: 53px;
-}
-.btn-txt:hover {
-  background-color: #c7b299;
-  color: #ffffff;
-}
-
-.btn-txt:hover:active {
-  background-color: #998675;
-  color: #fff;
-}
-
-.advertising-txt {
-  width: 530px;
-  height: 27px;
   font-family: "raleway regular", "open sans regular", sans-serif;
   font-size: 28px;
   font-weight: normal;
@@ -687,6 +641,40 @@ nav {
   letter-spacing: normal;
   text-align: left;
   color: #ffffff;
+  margin-left: 350px;
+  margin-top: 20px;
+}
+
+.advertising-a {
+  font-family: "raleway extrabold", "open sans extrabold", sans-serif;
+  font-size: 14px;
+  font-weight: 800;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.64;
+  letter-spacing: normal;
+  -moz-appearance: button;
+  -webkit-appearance: button;
+  padding: 0.2em 0.75em;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: inset 0px -3px 0 0 #736357;
+  background-color: #998675;
+  padding: 18px 28px 18px 28px;
+  margin-right: 350px;
+}
+.advertising-a:hover {
+  box-shadow: inset 0px -3px 0 0 #998675;
+  background-color: #736357;
+  color: #fff;
+}
+
+.advertising-a:active {
+  background-color: #998675;
+  color: #fff;
 }
 
 .advertising-logo-txt {
@@ -708,8 +696,6 @@ nav {
 }
 
 .advertising-p {
-  width: 463px;
-  height: 18px;
   font-family: "montserrat light", verdana, sans-serif;
   font-size: 18px;
   font-weight: 300;
@@ -1352,7 +1338,7 @@ nav {
   letter-spacing: normal;
   text-align: center;
   color: #ffffff;
-  padding: 7px 13px 7px 13px;
+  padding: 7px 14px 7px 13px;
   background-color: #252525;
   -moz-border-radius-bottomright: 4px;
   -webkit-border-bottom-right-radius: 4px;
@@ -1495,21 +1481,19 @@ nav {
 .partners {
   background-image: url(../img/partners-bg.jpg);
   min-height: 490px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
-
 .partners-img {
-    transition: 1s; /* Время эффекта */
-    display: block;
-    margin: 0 45px 0 45px;
-   }
-   .partners-img:hover {
-    transform: scale(1.2); /* Увеличиваем масштаб */
-   }
+  transition: 1s; /* Время эффекта */
+  display: block;
+  margin: 140px 45px 140px 45px;
+}
+.partners-img:hover {
+  transform: scale(1.2); /* Увеличиваем масштаб */
+}
